fixes on mobile view

--- a/src/app/pages/products/product-list.scss
+++ b/src/app/pages/products/product-list.scss
@@ -41,7 +41,7 @@
             .price{
                 color: #fff;
                 font-size: 10px;
-                font-family: "DM sans";
+                font-family: 'Times New Roman', Times, serif;
 
             }
           }
@@ -68,14 +68,14 @@
                 color: rgb(255, 0, 0);
                 font-size: 10px;
                 font-weight: 500;
-                font-family: "DM sans";
+                font-family: 'Times New Roman', Times, serif;
                 
               }
               .old-price{
                 font-size: 10px;
                 color: #666;
                 text-decoration: line-through;
-                font-family: "DM sans";
+                font-family: 'Times New Roman', Times, serif;
 
               }
           }
@@ -93,7 +93,7 @@
       background: #DB4444;
       color: #f1f1f1;
       font-size: 12px;
-      font-family: "DM sans";
+      font-family: 'Times New Roman', Times, serif;
     }
     .category-div{
       display: flex;
@@ -183,7 +183,7 @@
               align-items: flex-start;
               .title{
                 color: #666;
-                font-family: "DM sans";
+                font-family: 'Times New Roman', Times, serif;
                 font-size: 30px;
   
               }
@@ -195,7 +195,7 @@
                 padding: 16px;
                 align-items: center;
                 border-radius: 4px;
-                font-family: "DM sans";
+                font-family: 'Times New Roman', Times, serif;
 
                 &:hover{
                   cursor: pointer;
@@ -258,12 +258,12 @@
             font-size: 13px;
             color: #666;
             font-weight: 600;
-            font-family: "DM sans";
+            font-family: 'Times New Roman', Times, serif;
           }
           .price{
             font-size: 11px;
             color: #DB4444;
-            font-family: "DM sans";
+            font-family: 'Times New Roman', Times, serif;
           }
 
           &:hover{
@@ -298,11 +298,11 @@
       font-size: 20px;
       font-weight: 700;
       color: #DB4444;
-      font-family: "DM sans";
+      font-family: 'Times New Roman', Times, serif;
     }
   }
   .title{
-    font-family: "DM sans";
+    font-family: 'Times New Roman', Times, serif;
     color: #333;
     font-weight: 700;
 
@@ -359,7 +359,7 @@
         font-size: 20px;
         color: #0006;
         text-decoration: none;
-        font-family: "DM sans";
+        font-family: 'Times New Roman', Times, serif;
       }
     }
     
@@ -423,7 +423,7 @@
         text-transform:capitalize;
         font-size: 20px;
         color: #0006;
-        font-family: "DM sans";
+        font-family: 'Times New Roman', Times, serif;
       }
 
     }
@@ -459,12 +459,12 @@
         color: #000;
         font-size: 16px;
         font-weight: 700;
-        font-family: "DM sans";
+        font-family: 'Times New Roman', Times, serif;
 
       }
       .price{
         font-size: 12px;
-        font-family: "DM sans";
+        font-family: 'Times New Roman', Times, serif;
         color: #666;
         font-weight: 600;
       }
